unpackaged/main/default/objects/Registration__c/fields/CRD__c.field-meta.xml
<CustomField>
    <fullName>CRD__c</fullName>
    <label>CRD #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>