unpackaged/main/default/objects/Registration__c/fields/isManuallyCreated__c.field-meta.xml
<CustomField>
    <fullName>isManuallyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isManuallyCreated</label>
    <type>Checkbox</type>
</CustomField>