unpackaged/main/default/objects/Registration__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alabama</fullName>
                <label>AL</label>
            </value>
            <value>
                <fullName>Alaska</fullName>
                <label>AK</label>
            </value>
            <value>
                <fullName>Arizona</fullName>
                <label>AZ</label>
            </value>
            <value>
                <fullName>Arkansas</fullName>
                <label>AR</label>
            </value>
            <value>
                <fullName>California</fullName>
                <label>CA</label>
            </value>
            <value>
                <fullName>Colorado</fullName>
                <label>CO</label>
            </value>
            <value>
                <fullName>Connecticut</fullName>
                <label>CT</label>
            </value>
            <value>
                <fullName>Delaware</fullName>
                <label>DE</label>
            </value>
            <value>
                <fullName>District of Columbia</fullName>
                <label>DC</label>
            </value>
            <value>
                <fullName>Florida</fullName>
                <label>FL</label>
            </value>
            <value>
                <fullName>Georgia</fullName>
                <label>GA</label>
            </value>
            <value>
                <fullName>Hawaii</fullName>
                <label>HI</label>
            </value>
            <value>
                <fullName>Idaho</fullName>
                <label>ID</label>
            </value>
            <value>
                <fullName>Illinois</fullName>
                <label>IL</label>
            </value>
            <value>
                <fullName>Indiana</fullName>
                <label>IN</label>
            </value>
            <value>
                <fullName>Iowa</fullName>
                <label>IA</label>
            </value>
            <value>
                <fullName>Kansas</fullName>
                <label>KS</label>
            </value>
            <value>
                <fullName>Kentucky</fullName>
                <label>KY</label>
            </value>
            <value>
                <fullName>Louisiana</fullName>
                <label>LA</label>
            </value>
            <value>
                <fullName>Maine</fullName>
                <label>ME</label>
            </value>
            <value>
                <fullName>Maryland</fullName>
                <label>MD</label>
            </value>
            <value>
                <fullName>Massachusetts</fullName>
                <label>MA</label>
            </value>
            <value>
                <fullName>Michigan</fullName>
                <label>MI</label>
            </value>
            <value>
                <fullName>Minnesota</fullName>
                <label>MN</label>
            </value>
            <value>
                <fullName>Mississippi</fullName>
                <label>MS</label>
            </value>
            <value>
                <fullName>Missouri</fullName>
                <label>MO</label>
            </value>
            <value>
                <fullName>Montana</fullName>
                <label>MT</label>
            </value>
            <value>
                <fullName>Nebraska</fullName>
                <label>NE</label>
            </value>
            <value>
                <fullName>Nevada</fullName>
                <label>NV</label>
            </value>
            <value>
                <fullName>New Hampshire</fullName>
                <label>NH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>