unpackaged/main/default/objects/Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CRD__c</columns>
    <columns>Active__c</columns>
    <columns>State__c</columns>
    <columns>User__c</columns>
    <columns>isManuallyCreated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>