unpackaged/main/default/objects/Registration__c/listViews/All_Registrations.listView-meta.xml
<ListView>
    <fullName>All_Registrations</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CRD__c</columns>
    <columns>End_Date__c</columns>
    <columns>User__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Registrations</label>
</ListView>